package Bridge;

public interface MessageSender {
    String send();
}
