package Bridge;

public class SmsSender implements MessageSender {
    public String send() {
        return ("[SMS]");

    }
}
